[package]
name = "polyomino-tiling"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = ["console"] }
